# rand-python-rs

./: Cargo.toml
benches/: my_benchmark.rs
src/: lib.rs  mersenne_twister.rs
